--- a/portfolio.html
+++ b/portfolio.html
@@ -5,26 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Портфоліо</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
     <!--Шапка сайта-->
     <header>
       <nav>
-        <a href="./index.html" lang="en"> <span>Web</span>Studio</a>
-        <ul>
-          <li><a href="./index.html">Студія</a></li>
-          <li><a href="./portfolio.html">Портфоліо</a></li>
-          <li><a href="">Контакти</a></li>
+        <a href="./index.html" lang="en" class="logo-header">
+          <span class="logo-blue">Web</span>Studio</a
+        >
+        <ul class="site-nav">
+          <li><a href="./index.html" class="link">Студія</a></li>
+          <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
+          <li><a href="" class="link">Контакти</a></li>
         </ul>
       </nav>
 
-      <ul>
+      <ul class="contact">
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="contact-info"
+            >info@devstudio.com</a
+          >
         </li>
         <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="contact-info">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
@@ -32,22 +41,22 @@
     <!-- Основний контент -->
     <main>
       <!-- Заголовок необхідно сховати, на проекті немає -->
-      <h1>Зразки робот</h1>
-      <ul>
+      <h1 class="section-title-hidden">Зразки робот</h1>
+      <ul class="portfolio-button-list">
         <li><button type="button">Усі</button></li>
         <li><button type="button">Веб-сайти</button></li>
         <li><button type="button">Додатки</button></li>
         <li><button type="button">Дизайн</button></li>
         <li><button type="button">Маркетинг</button></li>
       </ul>
-      <ul>
+      <ul class="portfolio-sample-list">
         <li>
           <img
             src="./images/portfolio1.jpg"
             alt="Ноутбук із відкритим веб-сайтом"
             width="370"
           />
-          <h2>Технокряк</h2>
+          <h2 class="title">Технокряк</h2>
           <p>Веб-сайт</p>
         </li>
         <li>
@@ -56,7 +65,9 @@
             alt="Люди грають в баскетбол"
             width="370"
           />
-          <h2>Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+          <h2 class="title">
+            Постер <span lang="en">New Orlean vs Golden Star</span>
+          </h2>
           <p>Дизайн</p>
         </li>
         <li>
@@ -65,12 +76,12 @@
             alt="Риба із логотипом ресторану"
             width="370"
           />
-          <h2>Ресторан <span lang="en">Seafood</span></h2>
+          <h2 class="title">Ресторан <span lang="en">Seafood</span></h2>
           <p>Додаток</p>
         </li>
         <li>
           <img src="./images/portfolio4.jpg" alt="Навушники" width="370" />
-          <h2>Проєкт <span lang="en">Prime</span></h2>
+          <h2 class="title">Проєкт <span lang="en">Prime</span></h2>
           <p>Маркетинг</p>
         </li>
         <li>
@@ -79,7 +90,7 @@
             alt="Біла та коричнева коробки"
             width="370"
           />
-          <h2>Проєкт <span lang="en">Boxes</span></h2>
+          <h2 class="title">Проєкт <span lang="en">Boxes</span></h2>
           <p>Додаток</p>
         </li>
         <li>
@@ -88,12 +99,12 @@
             alt="Компьютер із відкритим сайтом"
             width="370"
           />
-          <h2 lang="en">Inspiration has no Borders</h2>
+          <h2 lang="en" class="title">Inspiration has no Borders</h2>
           <p>Веб-сайт</p>
         </li>
         <li>
           <img src="./images/portfolio7.jpg" alt="Книга" width="370" />
-          <h2>Видання <span lang="en">Limited Edition</span></h2>
+          <h2 class="title">Видання <span lang="en">Limited Edition</span></h2>
           <p>Дизайн</p>
         </li>
         <li>
@@ -102,7 +113,7 @@
             alt="Цінник із написом"
             width="370"
           />
-          <h2>Проєкт <span lang="en">LAB</span></h2>
+          <h2 class="title">Проєкт <span lang="en">LAB</span></h2>
           <p>Маркетинг</p>
         </li>
         <li>
@@ -111,30 +122,38 @@
             alt="Компьютер із відкритим додатком"
             width="370"
           />
-          <h2 lang="en">Growing Business</h2>
+          <h2 lang="en" class="title">Growing Business</h2>
           <p>Додаток</p>
         </li>
       </ul>
     </main>
 
     <!--Футер-->
-    <footer>
-      <a href="./index.html" lang="en"> <span>Web</span>Studio</a>
-      <address>
-        <ul>
+    <footer class="footer">
+      <a href="./index.html" lang="en" class="logo-footer">
+        <span class="logo-blue">Web</span>Studio</a
+      >
+      <address class="address">
+        <ul class="address-list">
           <li>
             <a
               href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
               target="_blank"
               rel="noopener noreferrer nofollow"
+              class="address-postal"
               >м. Київ, пр-т Лесі Українки, 26</a
             ><br />
           </li>
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br />
+            <a href="mailto:info@devstudio.com" class="contact-info"
+              >info@devstudio.com</a
+            >
+            <br />
           </li>
           <li>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="contact-info"
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </address>
