Варіант завдання 2 на перевірку

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Портфоліо</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
@@ -42,6 +44,7 @@
     <main>
       <!-- Заголовок необхідно сховати, на проекті немає -->
       <h1 class="section-title-hidden">Зразки робот</h1>
+      <!-- Кнопки фільтру -->
       <ul class="portfolio-button-list">
         <li><button type="button">Усі</button></li>
         <li><button type="button">Веб-сайти</button></li>
@@ -49,6 +52,7 @@
         <li><button type="button">Дизайн</button></li>
         <li><button type="button">Маркетинг</button></li>
       </ul>
+      <!-- Зразки робот -->
       <ul class="portfolio-sample-list">
         <li>
           <img
