--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
     <!-- Основний контент -->
     <main>
       <!-- Заголовок необхідно сховати, на проекті немає -->
-      <h1 class="section-title-hidden">Зразки робот</h1>
+      <h1 class="visually-hidden">Зразки робот</h1>
       <!-- Кнопки фільтру -->
       <ul class="portfolio-button-list">
         <li><button type="button">Усі</button></li>
