--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <!--Переваги-->
       <!--Заголовок відсутній на зразку-->
       <section class="section">
-        <h2 class="section-title-hidden">Наші переваги</h2>
+        <h2 class="visually-hidden">Наші переваги</h2>
         <ul class="feature-list">
           <li>
             <h3 class="title">Увага до деталей</h3>
