--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@
           <span class="logo-blue">Web</span>Studio</a
         >
         <ul class="site-nav">
-          <li><a href="./index.html" class="link">Студія</a></li>
-          <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
-          <li><a href="" class="link">Контакти</a></li>
+          <li><a href="./index.html" class="nav-link current">Студія</a></li>
+          <li><a href="./portfolio.html" class="nav-link">Портфоліо</a></li>
+          <li><a href="" class="nav-link">Контакти</a></li>
         </ul>
       </nav>
 
       <ul class="contact">
         <li>
-          <a href="mailto:info@devstudio.com" class="contact-info"
+          <a href="mailto:info@devstudio.com" class="contact-link"
             >info@devstudio.com</a
           >
         </li>
         <li>
-          <a href="tel:+380961111111" class="contact-info">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
@@ -49,32 +49,32 @@
       </section>
       <!--Переваги-->
       <!--Заголовок відсутній на зразку-->
-      <section class="section">
+      <section class="feature">
         <h2 class="visually-hidden">Наші переваги</h2>
         <ul class="feature-list">
           <li>
-            <h3 class="title">Увага до деталей</h3>
-            <p>
+            <h3 class="feature-list-title">Увага до деталей</h3>
+            <p class="feature-text">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
           <li>
-            <h3 class="title">Пунктуальність</h3>
-            <p>
+            <h3 class="feature-list-title">Пунктуальність</h3>
+            <p class="feature-text">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
           <li>
-            <h3 class="title">Планування</h3>
-            <p>
+            <h3 class="feature-list-title">Планування</h3>
+            <p class="feature-text">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
-            <h3 class="title">Сучасні технології</h3>
-            <p>
+            <h3 class="feature-list-title">Сучасні технології</h3>
+            <p class="feature-text">
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
             </p>
@@ -82,8 +82,8 @@
         </ul>
       </section>
       <!-- Сфера діяльності -->
-      <section class="section">
-        <h2 class="section-title">Чим ми займаємося</h2>
+      <section class="specialization">
+        <h2 class="specialization-title">Чим ми займаємося</h2>
         <ul class="specialization-list">
           <li>
             <img
@@ -105,28 +105,28 @@
         </ul>
       </section>
       <!--Команда-->
-      <section class="section team">
-        <h2 class="section-title">Наша команда</h2>
+      <section class="team">
+        <h2 class="team-title">Наша команда</h2>
         <ul class="team-list">
           <li>
             <img src="./images/team1.jpg" alt="Ігор Дем'яненко" width="270" />
-            <h3 class="title">Ігор Дем'яненко</h3>
-            <p lang="en">Product Designer</p>
+            <h3 class="team-list-title">Ігор Дем'яненко</h3>
+            <p lang="en" class="team-list-text">Product Designer</p>
           </li>
           <li>
             <img src="./images/team2.jpg" alt="Ольга Рєпіна" width="270" />
-            <h3 class="title">Ольга Рєпіна</h3>
-            <p lang="en">Frontend Developer</p>
+            <h3 class="team-list-title">Ольга Рєпіна</h3>
+            <p lang="en" class="team-list-text">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/team3.jpg" alt="Микола Тарасов" width="270" />
-            <h3 class="title">Микола Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <h3 class="team-list-title">Микола Тарасов</h3>
+            <p lang="en" class="team-list-text">Marketing</p>
           </li>
           <li>
             <img src="./images/team4.jpg" alt="Михайло Єрмаков" width="270" />
-            <h3 class="title">Михайло Єрмаков</h3>
-            <p lang="en">UI Designer</p>
+            <h3 class="team-list-title">Михайло Єрмаков</h3>
+            <p lang="en" class="team-list-text">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -149,13 +149,13 @@
             ><br />
           </li>
           <li>
-            <a href="mailto:info@devstudio.com" class="contact-info"
+            <a href="mailto:info@devstudio.com" class="contact-footer"
               >info@devstudio.com</a
             >
             <br />
           </li>
           <li>
-            <a href="tel:+380961111111" class="contact-info"
+            <a href="tel:+380961111111" class="contact-footer"
               >+38 096 111 11 11</a
             >
           </li>
