--- a/portfolio.html
+++ b/portfolio.html
@@ -22,20 +22,22 @@
           <span class="logo-blue">Web</span>Studio</a
         >
         <ul class="site-nav">
-          <li><a href="./index.html" class="link">Студія</a></li>
-          <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
-          <li><a href="" class="link">Контакти</a></li>
+          <li><a href="./index.html" class="nav-link">Студія</a></li>
+          <li>
+            <a href="./portfolio.html" class="nav-link current">Портфоліо</a>
+          </li>
+          <li><a href="" class="nav-link">Контакти</a></li>
         </ul>
       </nav>
 
       <ul class="contact">
         <li>
-          <a href="mailto:info@devstudio.com" class="contact-info"
+          <a href="mailto:info@devstudio.com" class="contact-link"
             >info@devstudio.com</a
           >
         </li>
         <li>
-          <a href="tel:+380961111111" class="contact-info">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
@@ -43,93 +45,107 @@
     <!-- Основний контент -->
     <main>
       <!-- Заголовок необхідно сховати, на проекті немає -->
-      <h1 class="visually-hidden">Зразки робот</h1>
-      <!-- Кнопки фільтру -->
-      <ul class="portfolio-button-list">
-        <li><button type="button">Усі</button></li>
-        <li><button type="button">Веб-сайти</button></li>
-        <li><button type="button">Додатки</button></li>
-        <li><button type="button">Дизайн</button></li>
-        <li><button type="button">Маркетинг</button></li>
-      </ul>
-      <!-- Зразки робот -->
-      <ul class="portfolio-sample-list">
-        <li>
-          <img
-            src="./images/portfolio1.jpg"
-            alt="Ноутбук із відкритим веб-сайтом"
-            width="370"
-          />
-          <h2 class="title">Технокряк</h2>
-          <p>Веб-сайт</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio2.jpg"
-            alt="Люди грають в баскетбол"
-            width="370"
-          />
-          <h2 class="title">
-            Постер <span lang="en">New Orlean vs Golden Star</span>
-          </h2>
-          <p>Дизайн</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio3.jpg"
-            alt="Риба із логотипом ресторану"
-            width="370"
-          />
-          <h2 class="title">Ресторан <span lang="en">Seafood</span></h2>
-          <p>Додаток</p>
-        </li>
-        <li>
-          <img src="./images/portfolio4.jpg" alt="Навушники" width="370" />
-          <h2 class="title">Проєкт <span lang="en">Prime</span></h2>
-          <p>Маркетинг</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio5.jpg"
-            alt="Біла та коричнева коробки"
-            width="370"
-          />
-          <h2 class="title">Проєкт <span lang="en">Boxes</span></h2>
-          <p>Додаток</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio6.jpg"
-            alt="Компьютер із відкритим сайтом"
-            width="370"
-          />
-          <h2 lang="en" class="title">Inspiration has no Borders</h2>
-          <p>Веб-сайт</p>
-        </li>
-        <li>
-          <img src="./images/portfolio7.jpg" alt="Книга" width="370" />
-          <h2 class="title">Видання <span lang="en">Limited Edition</span></h2>
-          <p>Дизайн</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio8.jpg"
-            alt="Цінник із написом"
-            width="370"
-          />
-          <h2 class="title">Проєкт <span lang="en">LAB</span></h2>
-          <p>Маркетинг</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio9.jpg"
-            alt="Компьютер із відкритим додатком"
-            width="370"
-          />
-          <h2 lang="en" class="title">Growing Business</h2>
-          <p>Додаток</p>
-        </li>
-      </ul>
+      <section>
+        <h1 class="visually-hidden">Зразки робот</h1>
+        <!-- Кнопки фільтру -->
+        <ul class="portfolio-button-list">
+          <li><button type="button">Усі</button></li>
+          <li><button type="button">Веб-сайти</button></li>
+          <li><button type="button">Додатки</button></li>
+          <li><button type="button">Дизайн</button></li>
+          <li><button type="button">Маркетинг</button></li>
+        </ul>
+        <!-- Зразки робот -->
+        <ul class="portfolio-sample">
+          <li>
+            <img
+              src="./images/portfolio1.jpg"
+              alt="Ноутбук із відкритим веб-сайтом"
+              width="370"
+            />
+            <h2 class="portfolio-sample-title">Технокряк</h2>
+            <p class="portfolio-sample-text">Веб-сайт</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio2.jpg"
+              alt="Люди грають в баскетбол"
+              width="370"
+            />
+            <h2 class="portfolio-sample-title">
+              Постер <span lang="en">New Orlean vs Golden Star</span>
+            </h2>
+            <p class="portfolio-sample-text">Дизайн</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio3.jpg"
+              alt="Риба із логотипом ресторану"
+              width="370"
+            />
+            <h2 class="portfolio-sample-title">
+              Ресторан <span lang="en">Seafood</span>
+            </h2>
+            <p class="portfolio-sample-text">Додаток</p>
+          </li>
+          <li>
+            <img src="./images/portfolio4.jpg" alt="Навушники" width="370" />
+            <h2 class="portfolio-sample-title">
+              Проєкт <span lang="en">Prime</span>
+            </h2>
+            <p class="portfolio-sample-text">Маркетинг</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio5.jpg"
+              alt="Біла та коричнева коробки"
+              width="370"
+            />
+            <h2 class="portfolio-sample-title">
+              Проєкт <span lang="en">Boxes</span>
+            </h2>
+            <p class="portfolio-sample-text">Додаток</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio6.jpg"
+              alt="Компьютер із відкритим сайтом"
+              width="370"
+            />
+            <h2 lang="en" class="portfolio-sample-title">
+              Inspiration has no Borders
+            </h2>
+            <p class="portfolio-sample-text">Веб-сайт</p>
+          </li>
+          <li>
+            <img src="./images/portfolio7.jpg" alt="Книга" width="370" />
+            <h2 class="portfolio-sample-title">
+              Видання <span lang="en">Limited Edition</span>
+            </h2>
+            <p class="portfolio-sample-text">Дизайн</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio8.jpg"
+              alt="Цінник із написом"
+              width="370"
+            />
+            <h2 class="portfolio-sample-title">
+              Проєкт <span lang="en">LAB</span>
+            </h2>
+            <p class="portfolio-sample-text">Маркетинг</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio9.jpg"
+              alt="Компьютер із відкритим додатком"
+              width="370"
+            />
+            <h2 lang="en" class="portfolio-sample-title">Growing Business</h2>
+            <p class="portfolio-sample-text">Додаток</p>
+          </li>
+        </ul>
+      </section>
     </main>
 
     <!--Футер-->
@@ -149,13 +165,13 @@
             ><br />
           </li>
           <li>
-            <a href="mailto:info@devstudio.com" class="contact-info"
+            <a href="mailto:info@devstudio.com" class="contact-footer"
               >info@devstudio.com</a
             >
             <br />
           </li>
           <li>
-            <a href="tel:+380961111111" class="contact-info"
+            <a href="tel:+380961111111" class="contact-footer"
               >+38 096 111 11 11</a
             >
           </li>
