--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       </section>
       <!-- Сфера діяльності -->
       <section class="specialization">
-        <h2 class="specialization-title">Чим ми займаємося</h2>
+        <h2 class="section-title">Чим ми займаємося</h2>
         <ul class="specialization-list">
           <li>
             <img
@@ -106,7 +106,7 @@
       </section>
       <!--Команда-->
       <section class="team">
-        <h2 class="team-title">Наша команда</h2>
+        <h2 class="section-title">Наша команда</h2>
         <ul class="team-list">
           <li>
             <img src="./images/team1.jpg" alt="Ігор Дем'яненко" width="270" />
