--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
         <a href="./index.html" lang="en" class="logo-header">
           <span class="logo-blue">Web</span>Studio</a
         >
-        <ul class="site-nav">
+        <ul class="site-nav list">
           <li><a href="./index.html" class="nav-link current">Студія</a></li>
           <li><a href="./portfolio.html" class="nav-link">Портфоліо</a></li>
           <li><a href="" class="nav-link">Контакти</a></li>
         </ul>
       </nav>
 
-      <ul class="contact">
+      <ul class="contact list">
         <li>
           <a href="mailto:info@devstudio.com" class="contact-link"
             >info@devstudio.com</a
@@ -51,7 +51,7 @@
       <!--Заголовок відсутній на зразку-->
       <section class="feature">
         <h2 class="visually-hidden">Наші переваги</h2>
-        <ul class="feature-list">
+        <ul class="feature-list list">
           <li>
             <h3 class="feature-list-title">Увага до деталей</h3>
             <p class="feature-text">
@@ -84,7 +84,7 @@
       <!-- Сфера діяльності -->
       <section class="specialization">
         <h2 class="section-title">Чим ми займаємося</h2>
-        <ul class="specialization-list">
+        <ul class="specialization-list list">
           <li>
             <img
               src="./images/specialization1.jpg"
@@ -107,7 +107,7 @@
       <!--Команда-->
       <section class="team">
         <h2 class="section-title">Наша команда</h2>
-        <ul class="team-list">
+        <ul class="team-list list">
           <li>
             <img src="./images/team1.jpg" alt="Ігор Дем'яненко" width="270" />
             <h3 class="team-list-title">Ігор Дем'яненко</h3>
@@ -138,7 +138,7 @@
         <span class="logo-blue">Web</span>Studio</a
       >
       <address class="address">
-        <ul class="address-list">
+        <ul class="address-list list">
           <li>
             <a
               href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
