--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
         <a href="./index.html" lang="en" class="logo-header">
           <span class="logo-blue">Web</span>Studio</a
         >
-        <ul class="site-nav">
+        <ul class="site-nav list">
           <li><a href="./index.html" class="nav-link">Студія</a></li>
           <li>
             <a href="./portfolio.html" class="nav-link current">Портфоліо</a>
@@ -30,7 +30,7 @@
         </ul>
       </nav>
 
-      <ul class="contact">
+      <ul class="contact list">
         <li>
           <a href="mailto:info@devstudio.com" class="contact-link"
             >info@devstudio.com</a
@@ -48,7 +48,7 @@
       <section>
         <h1 class="visually-hidden">Зразки робот</h1>
         <!-- Кнопки фільтру -->
-        <ul class="portfolio-button-list">
+        <ul class="portfolio-button-list list">
           <li><button type="button">Усі</button></li>
           <li><button type="button">Веб-сайти</button></li>
           <li><button type="button">Додатки</button></li>
@@ -56,7 +56,7 @@
           <li><button type="button">Маркетинг</button></li>
         </ul>
         <!-- Зразки робот -->
-        <ul class="portfolio-sample">
+        <ul class="portfolio-sample-list list">
           <li>
             <img
               src="./images/portfolio1.jpg"
@@ -154,7 +154,7 @@
         <span class="logo-blue">Web</span>Studio</a
       >
       <address class="address">
-        <ul class="address-list">
+        <ul class="address-list list">
           <li>
             <a
               href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
