.portfolio-sample-list-title, .portfolio-sample-list-text

--- a/portfolio.html
+++ b/portfolio.html
@@ -63,8 +63,8 @@
               alt="Ноутбук із відкритим веб-сайтом"
               width="370"
             />
-            <h2 class="portfolio-sample-title">Технокряк</h2>
-            <p class="portfolio-sample-text">Веб-сайт</p>
+            <h2 class="portfolio-sample-list-title">Технокряк</h2>
+            <p class="portfolio-sample-list-text">Веб-сайт</p>
           </li>
           <li>
             <img
@@ -72,10 +72,10 @@
               alt="Люди грають в баскетбол"
               width="370"
             />
-            <h2 class="portfolio-sample-title">
+            <h2 class="portfolio-sample-list-title">
               Постер <span lang="en">New Orlean vs Golden Star</span>
             </h2>
-            <p class="portfolio-sample-text">Дизайн</p>
+            <p class="portfolio-sample-list-text">Дизайн</p>
           </li>
           <li>
             <img
@@ -83,17 +83,17 @@
               alt="Риба із логотипом ресторану"
               width="370"
             />
-            <h2 class="portfolio-sample-title">
+            <h2 class="portfolio-sample-list-title">
               Ресторан <span lang="en">Seafood</span>
             </h2>
-            <p class="portfolio-sample-text">Додаток</p>
+            <p class="portfolio-sample-list-text">Додаток</p>
           </li>
           <li>
             <img src="./images/portfolio4.jpg" alt="Навушники" width="370" />
-            <h2 class="portfolio-sample-title">
+            <h2 class="portfolio-sample-list-title">
               Проєкт <span lang="en">Prime</span>
             </h2>
-            <p class="portfolio-sample-text">Маркетинг</p>
+            <p class="portfolio-sample-list-text">Маркетинг</p>
           </li>
           <li>
             <img
@@ -101,10 +101,10 @@
               alt="Біла та коричнева коробки"
               width="370"
             />
-            <h2 class="portfolio-sample-title">
+            <h2 class="portfolio-sample-list-title">
               Проєкт <span lang="en">Boxes</span>
             </h2>
-            <p class="portfolio-sample-text">Додаток</p>
+            <p class="portfolio-sample-list-text">Додаток</p>
           </li>
           <li>
             <img
@@ -112,17 +112,17 @@
               alt="Компьютер із відкритим сайтом"
               width="370"
             />
-            <h2 lang="en" class="portfolio-sample-title">
+            <h2 lang="en" class="portfolio-sample-list-title">
               Inspiration has no Borders
             </h2>
-            <p class="portfolio-sample-text">Веб-сайт</p>
+            <p class="portfolio-sample-list-text">Веб-сайт</p>
           </li>
           <li>
             <img src="./images/portfolio7.jpg" alt="Книга" width="370" />
-            <h2 class="portfolio-sample-title">
+            <h2 class="portfolio-sample-list-title">
               Видання <span lang="en">Limited Edition</span>
             </h2>
-            <p class="portfolio-sample-text">Дизайн</p>
+            <p class="portfolio-sample-list-text">Дизайн</p>
           </li>
           <li>
             <img
@@ -130,10 +130,10 @@
               alt="Цінник із написом"
               width="370"
             />
-            <h2 class="portfolio-sample-title">
+            <h2 class="portfolio-sample-list-title">
               Проєкт <span lang="en">LAB</span>
             </h2>
-            <p class="portfolio-sample-text">Маркетинг</p>
+            <p class="portfolio-sample-list-text">Маркетинг</p>
           </li>
           <li>
             <img
@@ -141,8 +141,10 @@
               alt="Компьютер із відкритим додатком"
               width="370"
             />
-            <h2 lang="en" class="portfolio-sample-title">Growing Business</h2>
-            <p class="portfolio-sample-text">Додаток</p>
+            <h2 lang="en" class="portfolio-sample-list-title">
+              Growing Business
+            </h2>
+            <p class="portfolio-sample-list-text">Додаток</p>
           </li>
         </ul>
       </section>
