--- a/index.html
+++ b/index.html
@@ -22,20 +22,26 @@
           <span class="logo-blue">Web</span>Studio</a
         >
         <ul class="site-nav list">
-          <li><a href="./index.html" class="nav-link current">Студія</a></li>
-          <li><a href="./portfolio.html" class="nav-link">Портфоліо</a></li>
-          <li><a href="" class="nav-link">Контакти</a></li>
+          <li>
+            <a href="./index.html" class="nav-link link current">Студія</a>
+          </li>
+          <li>
+            <a href="./portfolio.html" class="nav-link link">Портфоліо</a>
+          </li>
+          <li><a href="" class="nav-link link">Контакти</a></li>
         </ul>
       </nav>
 
       <ul class="contact list">
         <li>
-          <a href="mailto:info@devstudio.com" class="contact-link"
+          <a href="mailto:info@devstudio.com" class="contact-link link"
             >info@devstudio.com</a
           >
         </li>
         <li>
-          <a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="contact-link link"
+            >+38 096 111 11 11</a
+          >
         </li>
       </ul>
     </header>
